NIFI-12142: Deleted many methods, classes, and references that were deprecated.