@@ -16,10 +16,9 @@
  */
 package org.apache.nifi.logging;
 
-import org.slf4j.LoggerFactory;
-
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import org.slf4j.LoggerFactory;
 
 import static java.util.Objects.requireNonNull;
 
@@ -49,7 +48,7 @@ public class LogRepositoryFactory {
         LogRepository repository = repositoryMap.get(requireNonNull(componentId));
         if (repository == null) {
             try {
-                repository = logRepositoryClass.newInstance();
+                repository = logRepositoryClass.getDeclaredConstructor().newInstance();
             } catch (final Exception e) {
                 throw new RuntimeException(e);
             }
